--- a/package.json
+++ b/package.json
@@ -60,15 +60,15 @@
     "glob": "^7.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-firefox-launcher": "^1.1.0",
+    "karma-firefox-launcher": "~1.1.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-sauce-launcher": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "protractor": "~5.3.0",
+    "protractor": "~5.4.0",
     "puppeteer": "^1.5.0",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^1.5.0",
